@@ -5,6 +5,7 @@
 	Look in GeneralTemplate.xaml of ShowcaseApp.WPF project.
 	Added rotation support for image based edge pointers
 + Added extensibility to corresponding controls by inheriting from IEdgeLabelControl and IEdgePointer [WPF]
++ Added extensibility to corresponding controls by inheriting from IVertexLabelControl [WPF]
 + Added support method GraphArea::GetVertexControlAt(Point position) to get VC by coordinates [METRO, WPF]
 + Added VertexControl::GetCenterPosition() method to get vertex center position instead the default top-left [WPF, METRO]
 + Added new showcase example: Templates/Graph editor [WPF]
@@ -13,6 +14,7 @@
 + Fixed ZoomControl unresponsivness after startup (prev needed to change zoom/translation first to work fine) [WPF,METRO]
 + Fixed ZoomControl::Zoom property bug on empty content window resize [WPF, METRO]
 + Fixed dynamic graph showcase example first vertex auto zooming onto [WPF]
++ Fixed some issues in ShowcaseApp.WPF
 + Fixed GraphArea::DeserializeFromFile() logic and filestorage logic to properly restore internal data for loaded graphs [WPF, METRO]
 + Optimized showcase app media files
 
